doing all work unfinised

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!-- 1st part -->
     <section class="section">
         <div class="banner">
+            <img src="images/banner_image.png" alt="">
             <div class="banner-content">
                 <h3 class="banner-greet">Happy New Year</h3>
                 <h1 class="banner-title">New Year Party <br>Celebration</h1>
@@ -46,7 +47,9 @@
                 <p class="midnight-description">"As the new year dawns, embrace fresh beginnings and let hope light your path. May joy accompany your every step, and success be your constant companion. Here's to health, happiness, and countless beautiful moments. Happy New Year to you and your loved ones! May it be a year of dreams fulfilled and aspirations achieved."</p>
                 <h3 class="join-now">JOIN NOW</h3>
             </div>
-            <img class="profile-pic" src="images/group70.png" alt="">
+            <div class="midnight-image">
+                <img class="profile-pic" src="images/group70.png" alt="">
+            </div>
         </div>
     </section>
 
@@ -58,5 +61,128 @@
             <button class="btn-primary">JOIN NOW</button>
         </div>
     </section>
+
+    <!-- coming soon section here -->
+
+    <section class="coming">
+      <div class="coming-soon">
+        <div class="coming-text">
+            <h3>NEW BEST OFFER</h3>
+            <h1>Coming Soon</h1>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+        </div>
+        <div class="coming-image">
+            <img src="images/ellipse1.png" alt="">
+        </div>
+        <div class="coming-text-image">
+            <h1>2024</h1>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+            <img src="images/group96.png" alt="">
+        </div>
+      </div>
+    </section>
+
+    <!-- holidays section here -->
+
+    <section class="holiday">
+        <div class="holiday-content">
+            <h4>WHAT IS FUNCTIONAL</h4>
+            <h1><span class="red-text">Holidays</span> Sale 50%</h1>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
+                molestie malesuada. <br>Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+        </div>
+    </section>
+
+    <section class="holiday-image">
+        <div class="image-content">
+          <div class="first-image"><img src="images/group75.png" alt=""></div>
+          <div class="second-image"><img src="images/group44.png" alt=""></div>
+          <div class="third-image"><img src="images/rectangle1.png" alt=""></div>
+        </div>
+      </section>
+
+      <!-- portfolio section starts -->
+
+      <section class="portfolio">
+        <div class="portfolio-content">
+            <h4>THE BEST GIFTS</h4>
+            <h1>Our Awesome Portfolio</h1>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+        </div>
+        <div class="grid-container">
+            <div class="grid">
+                <img src="images/rectangle3.png" alt="">
+                <img src="images/rectangle4.png" alt="">
+                <img src="images/rectangle5.png" alt="">
+                <img src="images/rectangle6.png" alt="">
+                <img src="images/rectangle7.png" alt="">
+                <img src="images/rectangle8.png" alt="">
+            </div>
+        </div>  
+
+        <!-- newsletter section here -->
+        <section id="newsletter">
+            <div class="newsletter-container">
+              <div class="newsletter-icon">
+                <a href="#"><i class="fas fa-envelope"></i></a>
+              </div>
+              <div class="newsletter-content">
+                <h2 class="newsletter-title">Subscribe Newsletter</h2>
+                <p class="newsletter-copy">
+                  Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                  molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+                  euismod.
+                </p>
+                <div class="newsletter-form">
+                  <input type="email" class="newsletter-email" placeholder="Enter your email address" />
+                  <button class="newsletter-button">Subscribe</button>
+                </div>
+              </div>
+            </div>
+          </section>
+          
+      <!-- footer section here -->
+
+      <footer>
+        <div class="footer-container">
+          <div class="footer-text">
+            <address class="fo-address">
+              <p>
+                44, Big Building Roosevelt<br />
+                Street Beach Gardens Florida 33410
+              </p>
+            </address>
+            <ul class="fo-contact">
+              <li>
+                <a href="tel:+00123584124"><i class="fa-solid fa-phone"></i> +00 123 584 124</a>
+              </li>
+              <li>
+                <a href="http://www.website.com" target="_blank"><i class="fa-solid fa-globe"></i> www.website.com</a>
+              </li>
+            </ul>
+          </div>
+          <div class="social-icons">
+            <ul class="socials">
+              <li>
+                <a href="#" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+              </li>
+              <li>
+                <a href="#" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+              </li>
+              <li>
+                <a href="#" target="_blank"><i class="fa-brands fa-google-plus"></i></a>
+              </li>
+              <li>
+                <a href="#" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-bottom">
+            <p class="copy-text">© 2023 All Rights Reserved.</p>
+            <button class="btn-unsubscribe">Unsubscribe</button>
+          </div>
+        </div>
+      </footer>
+      
 </body>
 </html>
